--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+:root {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   text-align: center;
   padding-top: 50px;
   background-color: #f5f5f5;
+  
 }
 
 h1 {
@@ -18,7 +23,7 @@ button {
   cursor: pointer;
 }
 
-  .pdf-button {
+.pdf-button {
     margin-top: 20px;
     padding: 10px 20px;
     background-color: #4caf50;
@@ -26,5 +31,5 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-  }
+}
 
