--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+:root {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   text-align: center;
   padding-top: 50px;
   background-color: #f5f5f5;
+  
 }
 
 h1 {
