Destructuring script js

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+
+@import url('https://candyfonts.com/wp-data/2018/10/26/11538/HELR45W.ttf');
+
 :root {
   font-family: Arial, Helvetica, sans-serif;
 }
